compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_dynamic_bits_size.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1051
expression: "\npub fn go(x) {\n  let n = 16\n  let assert <<a:bits-size(n)>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let n = 16
  let assert <<a:bits-size(n)>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySlice } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let n = 16;
  let a;
  if (n >= 0 && x.bitSize === n) {
    a = bitArraySlice(x, 0, n);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      4,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 31, end: 64, pattern_start: 42, pattern_end: 60 }
    )
  }
  return x;
}
