compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_dynamic_size_literal_value.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1024
expression: "\npub fn go(x) {\n  let n = 8\n  let assert <<a:size(n), 0b010101:size(8)>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let n = 8
  let assert <<a:size(n), 0b010101:size(8)>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToInt } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let n = 8;
  let a;
  if (
    n >= 0 &&
    x.bitSize >= n &&
    x.bitSize === 8 + n &&
    bitArraySliceToInt(x, n, n + 8, true, false) === 21
  ) {
    a = bitArraySliceToInt(x, 0, n, true, false);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      4,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 30, end: 76, pattern_start: 41, pattern_end: 72 }
    )
  }
  return x;
}
