compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_dynamic_size_shadowed_variable.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 995
expression: "\npub fn go(x) {\n  let n = 16\n  let n = 5\n  let assert <<a:size(n)>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let n = 16
  let n = 5
  let assert <<a:size(n)>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToInt } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let n = 16;
  let n$1 = 5;
  let a;
  if (n$1 >= 0 && x.bitSize === n$1) {
    a = bitArraySliceToInt(x, 0, n$1, true, false);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      5,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 43, end: 71, pattern_start: 54, pattern_end: 67 }
    )
  }
  return x;
}
