compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_dynamic_size_with_other_segments.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 966
expression: "\npub fn go(x) {\n  let n = 16\n  let m = 32\n  let assert <<first:size(8), a:size(n), b:size(m), rest:bits>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let n = 16
  let m = 32
  let assert <<first:size(8), a:size(n), b:size(m), rest:bits>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySlice, bitArraySliceToInt } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let n = 16;
  let m = 32;
  let first;
  let a;
  let b;
  let rest;
  if (
    x.bitSize >= 8 &&
    n >= 0 &&
    x.bitSize >= 8 + n &&
    m >= 0 &&
    x.bitSize >= 8 + m + n
  ) {
    first = x.byteAt(0);
    a = bitArraySliceToInt(x, 8, 8 + n, true, false);
    b = bitArraySliceToInt(x, 8 + n, 8 + n + m, true, false);
    rest = bitArraySlice(x, 8 + m + n);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      5,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 44, end: 109, pattern_start: 55, pattern_end: 105 }
    )
  }
  return x;
}
