compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_float_sized.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1260
expression: "\npub fn go(x) {\n  let assert <<a:float-32, b:int>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<a:float-32, b:int>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToFloat } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let a;
  let b;
  if (
    x.bitSize >= 32 &&
    Number.isFinite(bitArraySliceToFloat(x, 0, 32, true)) &&
    x.bitSize === 40
  ) {
    a = bitArraySliceToFloat(x, 0, 32, true);
    b = x.byteAt(4);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 54, pattern_start: 29, pattern_end: 50 }
    )
  }
  return x;
}
